data/derived/comb/progs/unify/prog2008.ml.out
Characters 83-87:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type bool
